--- a/responsive.css
+++ b/responsive.css
@@ -2,6 +2,12 @@
     nav .menu {
         display: none;
     }
-
+.main{
+    display: block;
+    /* width: 100%; */
+}
+.main .main-content, .main .main-img{
+    width: 100%;
+}
 
 }
