--- a/style.css
+++ b/style.css
@@ -41,108 +41,150 @@
     --DarkBlue: hsl(233, 26%, 24%);
     --LimeGreen: hsl(136, 65%, 51%);
     --BrightCyan: hsl(192, 70%, 51%);
-    /* Neutral */
 
+    /* Neutral */
     --GrayishBlue: hsl(233, 8%, 62%);
     --LightGrayishBlue: hsl(220, 16%, 96%);
     --VeryLightGray: hsl(0, 0%, 98%);
     --White: hsl(0, 0%, 100%);
 }
 
-body {
+html {
 
     font-size: 18px
 }
 
-/* nav{
-    background-color: #eee7e7;
-    
-} */
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul {
+    margin: 0;
+    padding: 0;
+    font-weight: normal;
+}
+body{
+    overflow-x: hidden;
+}
+.full-container {
+    width: 1440px;
+    max-width: 100%;
+    /* background-color: #b3b3e6; */
+
+}
+
+.container {
+    width: 1440px;
+    max-width: 85%;
+    margin: 0 auto;
+    /* background-color: bisque; */
+}
+
+/* images */
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+
+/* navbar css start */
+.nav-section{
+    background-color: var(--White);
+    position: relative;
+    z-index: 1;
+    padding: 25px 0;
+}
+
 
 .navbar {
     display: flex;
-    width: 100%;
-    height: 80px;
-    justify-content: space-between;
     align-items: center;
-    /* background-color: #eee7e7; */
+    justify-content: space-between;
 }
 
-nav .menu ul {
-    list-style: none;
+.navbar ul {
     display: flex;
+    list-style: none;
     gap: 30px;
 }
 
-nav .menu ul a {
+.navbar ul li a {
     text-decoration: none;
-    color: #686464;
+    color: var(--GrayishBlue);
     padding: 28px 0;
     border-bottom: 2px solid var(--White);
-    transition: ease-in 0.5s;
+    transition: all 0.5 ease-in-out;
+ 
 }
 
-.button button {
-    border: none;
-    border-radius: 30px;
-    padding: 10px 30px;
-    color: white;
-    transition: ease-in 0.5s;
-    background: linear-gradient(to right, var(--BrightCyan), var(--LimeGreen));
+.navbar ul li a:hover {
+
+    border-bottom: 2px solid var(--LimeGreen);
+    /* #f0efed */
 }
 
-.button button:hover {
-    border: none;
-    border-radius: 30px;
-    padding: 10px 30px;
-    color: white;
-    background: linear-gradient(to right, var(--LimeGreen), var(--BrightCyan));
+.navbar ul li a:hover {
+    color: var(--LimeGreen);
+    transition: all 0.5 ease-in;
 }
 
-nav .menu ul a:hover {
-    border-bottom: 3px solid var(--BrightCyan);
-}
-
-
-/* ================================ */
-.container {
-    width: 80%;
-    margin: 0 auto;
-}
-
-/* =============================== */
-/* banner part */
-.main {
-    /* width: 100%; */
-    height: calc(100vh - 80px);
-    display: flex;
-   
-
-
-}
-
-.main .main-content {
-    width: 40%;
-    padding: 50px 0px;
-}
-
-.main-content h1,
-p,
 .btn {
-    margin-top: 25px;
+    background-image: linear-gradient(to right, var(--LimeGreen), var(--BrightCyan));
+    transition: all 0.5 ease-in-out;
+    border: none;
+    border-radius: 30px;
+    padding: 10px 20px;
 }
 
-.main-content h1 {
-    font-size: 60px;
+.btn:hover {
+    background-image: linear-gradient(to right, var(--BrightCyan), var(--LimeGreen));
+
 }
 
-.main .main-img {
-    
-    width: 60%;
-    padding: 30px 0 0 40px;
+/* navbar css end */
+/* =================================================== */
+/* banner section start */
+.header-section {
+    background-color: var(--VeryLightGray);
+    padding-bottom: 10px;
 }
 
-.main .main-img img {
-    width: 100%;
-    height: 80%;
+.header-wrapper {
+    display: flex;
+    align-items: center;
+    /* background-color: blue; */
 }
+
+.header-text {
+    flex: 1 0 40%;
+  
+}
+
+.header-img {
+    flex: 1 0 60%;
+    position: relative;
+
+}
+
+.header-img img:first-child {
+    position: relative;
+    top: -62px;
+    bottom: 0;
+    right: -150px;
+    transform: scale(1.5);
+}
+
+.header-img img:last-child {
+    position: absolute;
+    right: -175px;
+    bottom: -160px;
+    transform: scale(1);
+
+}
+
+/* banner section end */
